--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -19,7 +19,11 @@
 
 body {
     font-family: 'Manrope', sans-serif;
-    background-color: #24211f;
+    background-color: #24211f; /* цвет фона */
+    background-image: url('../image/grunge-background.png');
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: overlay; /* экспериментируйте с режимами */
     color: #fff;
     line-height: 1.6;
 }
@@ -179,7 +183,7 @@ nav {
 /* Герой секция с каруселью */
 .hero-carousel {
     position: relative;
-    height: 70vh;
+    height: 50vh;
     min-height: 500px;
     overflow: hidden;
 }
@@ -418,6 +422,11 @@ nav {
 /* Современный футер */
 .modern-footer {
     background: linear-gradient(to bottom, #2a2725, #1a1817);
+    background-color: #24211f; /* цвет фона */
+    background-image: url('../image/grunge-background.png');
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: overlay; /* экспериментируйте с режимами */
     color: #fff;
     padding: 60px 5% 30px;
     position: relative;
