--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -186,7 +186,25 @@ nav {
     height: 50vh;
     min-height: 500px;
     overflow: hidden;
+    margin-bottom: 0; /* Убираем отступ снизу */
+    background: inherit; /* наследует фон от body */
 }
+
+.hero-carousel::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* меньше высота */
+    background: linear-gradient(to bottom, 
+        rgba(36, 33, 31, 0) 0%, 
+        #24211f 100%);
+    z-index: 3;
+    pointer-events: none;
+}
+
+
 
 .carousel-slides {
     display: flex;
@@ -339,8 +357,12 @@ nav {
     right: 20px;
 }
 
+
 /* Основное содержимое */
 .main-content {
+    margin-top: -15px; /* Поднимаем контент вверх */
+    position: relative;
+    z-index: 3;
     padding: 50px 5%;
 }
 
