--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,12 @@
 body {
     font-family: 'Manrope', sans-serif;
     background-color: #24211f; /* цвет фона */
+    background-image: url('../image/grunge-background.png');;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    background-blend-mode: overlay; /* экспериментируйте с режимами */
     color: #fff;
+    line-height: 1.6;
 }
 
 /* Стили для скроллбара */
