--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -24,8 +24,8 @@ html, body {
 
 body {
     font-family: 'Manrope', sans-serif;
-    background-color: #24211f; /* базовый тёмный */
-    background-image: url('../image/grunge-background.png');
+    background: url("../image/grunge-background.png") center / cover no-repeat,
+	linear-gradient(#24211f, rgba(36, 33, 31, 22)) fixed;
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
