--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,15 @@
 body {
     font-family: 'Manrope', sans-serif;
     background-color: #24211f; /* цвет фона */
-    background-image: url('../image/grunge-background.png');;
     background-size: cover;
     background-position: center;
-    background-blend-mode: overlay; /* экспериментируйте с режимами */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     color: #fff;
-    line-height: 1.6;
 }
 
 /* Стили для скроллбара */
