--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -67,7 +67,7 @@ nav {
     padding: 0 5%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border-bottom: 2px solid #FFF19B;
+    border-bottom: 2px solid rgba(71,65,61, 0.4);
 }
 
 .navbar {
@@ -449,7 +449,7 @@ nav {
     padding: 60px 5% 30px;
     position: relative;
     overflow: hidden;
-    border-top: 2px solid #FFF19B;
+    border-top: 2px solid rgba(71,65,61, 0.4);
 }
 
 .footer-content {
