--- a/css/news.css
+++ b/css/news.css
@@ -2,7 +2,6 @@
 .news-main {
     font-family: 'Manrope', sans-serif;
     background-color: #24211f; /* цвет фона */
-    background-image: url('../image/grunge-background.png');;
     background-size: cover;
     background-position: center;
     background-blend-mode: overlay; /* экспериментируйте с режимами */
@@ -11,7 +10,7 @@
 }
 
 .news-header {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../image/background.jpg') no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../image/back2.png') no-repeat center center;
     background-size: cover;
     padding: 80px 0;
     text-align: center;
