--- a/css/styleforindex.css
+++ b/css/styleforindex.css
@@ -87,7 +87,7 @@ nav {
     padding: 0 5%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border-bottom: 2px solid #FFF19B;
+    border-bottom: 0.5px solid #727272;
     position: relative;
     z-index: 10;
 }
@@ -154,7 +154,7 @@ nav {
     transform: translateY(10px);
     opacity: 0;
     transition: all 0.4s ease;
-    border: 1px solid #FFF19B;
+    border: 1px solid #727272;
 }
 
 .dropdown-menu li {
@@ -468,7 +468,7 @@ nav {
     padding: 60px 5% 30px;
     position: relative;
     overflow: hidden;
-    border-top: 2px solid #FFF19B;
+    border-top: 0.1px solid #727272;
 }
 
 .footer-content {
