--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ nav {
     padding: 0 5%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border-bottom: 2px solid #FFF19B;
+    border-bottom: 0.5px solid #727272;
 }
 
 .navbar {
@@ -347,7 +347,7 @@ nav {
     border-radius: 10px;
     padding: 30px;
     transition: all 0.3s ease;
-    border: 1px solid rgba(122, 102, 6, 0.3);
+    border: 1px solid #727272;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -473,7 +473,7 @@ nav {
     padding: 60px 5% 30px;
     position: relative;
     overflow: hidden;
-    border-top: 2px solid #FFF19B;
+    border-top: 0.1px solid #727272;
 }
 
 .footer-content {
