--- a/css/style1.css
+++ b/css/style1.css
@@ -88,7 +88,7 @@ nav {
     padding: 0 5%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     width: 100%;
-    border-bottom: 2px solid rgba(71,65,61, 0.4);
+    border-bottom: 0.5px solid #727272;
 }
 
 .navbar {
@@ -137,7 +137,6 @@ nav {
     transform: translateY(-1px);
 }
 
-/* Выпадающее меню */
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -153,7 +152,7 @@ nav {
     transform: translateY(10px);
     opacity: 0;
     transition: all 0.4s ease;
-    border: 1px solid #FFF19B;
+    border: 1px solid #727272; 
 }
 
 .dropdown-menu li {
@@ -554,7 +553,7 @@ nav {
     padding: 60px 5% 30px;
     position: relative;
     overflow: hidden;
-    border-top: 2px solid rgba(71,65,61, 0.4);
+    border-top: 0.1px solid #727272;
 }
 
 .footer-content {
